--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,6 @@
 # Kernel Module Compile Results
 *.mod*
 *.cmd
-*.zip
 .tmp_versions/
 modules.order
 Module.symvers
@@ -55,5 +54,4 @@ dkms.conf
 # macOS
 .DS_Store
 
-extra/*
-
+Networks\ Lab\ 2021/
